syntax = "proto3";

package pb;

import "date.proto";

option go_package = "github.com/khiemta03/bookstore-be/book-service/internal/grpc/gen/book;pb";

message AddNewBookRequest {
    string title = 1;
    string full_title = 2;
    string publisher = 3;
    google.type.Date publication_date = 4;
    string isbn = 5;
    string description = 6;
    double price = 7;
    int32 stock_quantity = 8;   
    string front_cover_image = 9;
    string back_cover_image = 10;
    repeated string authors = 11;
}
